# Multimodal-LLM-ComfyUI-node

./: .gitignore  LICENSE  README.md  __init__.py  __main__.py  bonus_image_intent.py  gguf_multimodal.py  gguf_picker.py  nodes.py  pyproject.toml  requirements.txt
.github/workflows/: publish_action.yml
llm_comfy_multimodal/: README.md  env_probe.py  install_llama_wheel.py  nodes.py  paths_helper.py  wheel_resolver.py
llm_comfy_multimodal/presets/context/: character_sheet_template.md  editing_invariants_checklist.md  image_prompting_flux.md  prompt_length_and_order_rules.md  sdxl_negative_baseline.md  video_prompting_wan.md
llm_comfy_multimodal/presets/system/: 01_image_describer.md  03_prompt_writer_flux.md  05_prompt_writer_wan_ltx_video.md  07_edit_director_consistency.md  08_context_updater.md  09_json_schema_strict.md
presets/context/: image_prompting_flux_kontext.md  image_prompting_sdxl.md  image_prompting_zimage.md  json_schema_contracts.md  model_dialects_quickref.md  style_schemas.md  video_prompting_ltx.md
presets/system/: 02_prompt_writer_sdxl.md  04_prompt_writer_zimage.md  06_qc_reviewer.md
web/: llm_comfy_stream.js
workflow/: multimodal - LLM.json
