[project]
name = "multimodal-llm-comfyui-node"
description = "Local-first multimodal LLM nodes for ComfyUI (GGUF+mmproj via llama.cpp, optional Transformers fallback)."
version = "1.0.2"
license = { file = "LICENSE" }
# classifiers = [
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["transformers>=4.45.0", "packaging>=23.0", "accelerate>=0.34.0", "safetensors>=0.4.0", "sentencepiece>=0.2.0", "protobuf>=4.25.0", "pillow>=10.0.0", "llama-cpp-python>=0.3.0"]

[project.urls]
Repository = "https://github.com/theonetwoone/Multimodal-LLM-ComfyUI-node"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/theonetwoone/Multimodal-LLM-ComfyUI-node"
"Bug Tracker" = "https://github.com/theonetwoone/Multimodal-LLM-ComfyUI-node/issues"

[tool.comfy]
PublisherId = "theonetwoone"
DisplayName = "Multimodal — LLM (Local-first: GGUF + Transformers)"
Icon = "https://www.cystyle.it/logo-glitched5.png"
includes = [
  "__init__.py",
  "__main__.py",
  "nodes.py",
  "gguf_multimodal.py",
  "gguf_picker.py",
  "wheel_resolver.py",
  "install_llama_wheel.py",
  "env_probe.py",
  "bonus_image_intent.py",
  "paths_helper.py",
  "requirements.txt",
  "README.md",
  "LICENSE",
  "web/**",
  "presets/**",
  "workflow/**",
]
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

